<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.neshkeev</groupId>
    <artifactId>avaj</artifactId>
    <version>0.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	<maven.compiler.source>13</maven.compiler.source>
	<maven.compiler.target>13</maven.compiler.target>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
			<compilerArgs>
				<arg>-Xlint</arg>
				<arg>--enable-preview</arg>
			</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
